--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -709,13 +711,53 @@ hr{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    text-align: center;
 } 
 
 .youtube i{
     color: #f0931a;
     font-size: 30px;
-    border: 1px solid white;
     border-radius: 50%;
     padding: 10px;
     background-color: white;
+    margin-bottom: 10px; 
+    transition: 1s all ease;
+}
+
+.youtube i:hover{
+    background-color: black;
+    color: white;
+}
+
+.footer_about-us{
+    width: 100%;
+    height: 270px;
+    background-color: black;
+    display: flex;
+    align-items:center ;
+}
+
+.footer_first-block{
+    width: 30%;
+    height: 120px;
+}
+
+.footer_first-block h2, p{
+    color: white;
+}
+
+.footer_about-us i{
+    color: white;
+    border-radius: 50%;
+    padding: 10px;
+    background-color: #f0931a;
+    margin-right: 10px;
+    margin-top: 8px;
+    font-size: 25px;
+    transition: 1s all ease;
+}
+
+.footer_about-us i:hover{
+    background-color: white;
+    color: #f0931a;
 }
