--- a/app/css/main.css
+++ b/app/css/main.css
@@ -701,7 +701,7 @@ hr{
 
 .footer{
     width: 100%;
-    height: 400px;
+    height: 360px;
 }
 
 .contact_block{
@@ -731,13 +731,14 @@ hr{
 
 .footer_about-us{
     width: 100%;
-    height: 270px;
+    height: 230px;
     background-color: black;
     display: flex;
     align-items:center ;
+    justify-content: space-around;
 }
 
-.footer_first-block, .footer_link{
+.footer_first-block, .footer_link, .footer_copy{
     width: 30%;
     height: 120px;
 }
@@ -776,4 +777,17 @@ hr{
 
 .footer_link li a:hover{
     color: #f0931a;
+}
+
+.footer_copy h2{
+    color: white;
+}
+
+.footer_copy h3{
+    width: 28px;
+    border: 1px solid #f0931a;
+    border-radius: 50%;
+    color: white;
+    padding: 5px;
+    margin-top: 8px;
 }
