--- a/app/css/tournament.css
+++ b/app/css/tournament.css
@@ -6,7 +6,7 @@
 body{
     font-family: "Montserrat", sans-serif;
     overflow-x: hidden; 
-    background-image: url(../img/kratostrain.jpg);
+    background-image: url(../img/tournament_background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
@@ -196,4 +196,33 @@ body{
     .registration-form{
         top: 330px;
     }
+}
+
+        /*Основной контент*/
+
+.main{
+    width: 100%;
+    height: 100%;
+}
+
+
+.res_in_tour{
+    border: 3px solid #f0931a;
+    width: 750px;
+    height: 450px;
+    border-radius: 10px;
+    margin: 50px auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.res_in_tour h1{
+    color: white;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.res_in_tour p{
+    color: white;
+    padding-top: 10px;
+    padding-left: 20px;
 }
