--- a/app/css/tournament.css
+++ b/app/css/tournament.css
@@ -6,19 +6,19 @@
 body{
     font-family: "Montserrat", sans-serif;
     overflow-x: hidden; 
-    background-image: url(../img/tournament_background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-blend-mode: multiply;
-    background-color: rgba(0, 0, 0, 0.4);
+  
 }
 
      /*HEADER*/
 
 .header{
     width: 100%;
-    height: 80px;
-    
+    height: 650px;
+    background-image: url(../img/tournament_background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .header__block{
@@ -59,7 +59,16 @@ body{
     color: #f0931a;
 }
 
+@media(max-width:640px){
+    .header{
+        height: 680px;
+    }
+}
+
 @media(max-width:590px){
+    .header{
+        height: 720px;
+    }
     .header__block{
         flex-direction: column;
         height: 130px;
@@ -69,6 +78,12 @@ body{
     }
     .header__icon i{
         padding-bottom: 8px;
+    }
+}
+
+@media(max-width:420px){
+    .header{
+        height: 930px;
     }
 }
 
@@ -197,19 +212,10 @@ body{
         top: 330px;
     }
 }
-
-        /*Основной контент*/
-
-.main{
-    width: 100%;
-    height: 100%;
-}
-
-
-.res_in_tour{
+ .res_in_tour{
     border: 3px solid #f0931a;
     width: 750px;
-    height: 450px;
+    height: 340px;
     border-radius: 10px;
     margin: 50px auto;
     background-color: rgba(0, 0, 0, 0.4);
@@ -225,4 +231,47 @@ body{
     color: white;
     padding-top: 10px;
     padding-left: 20px;
+}
+
+@media(max-width:780px){
+    .res_in_tour{
+        width: 680px;
+        height: 380px;
+    }
+}
+
+@media(max-width:770px){
+    .res_in_tour{
+        width: 600px;
+        height: 400px;
+    }
+}
+
+@media(max-width:640px){
+    .res_in_tour{
+        width: 540px;
+        height: 430px;
+    }
+}
+
+@media(max-width:580px){
+    .res_in_tour{
+        width: 450px;
+        height: 480px;
+    }
+}
+
+@media(max-width:480px){
+    .res_in_tour{
+        width: 400px;
+        height: 500px;
+    }
+}
+
+@media(max-width:420px){
+    .res_in_tour{
+        width: 310px;
+        height: 650px;
+    }
+   
 }
